--- a/3. Natural Language Processing in TensorFlow/Course 3 - Week 4 - Lesson 1 - Notebook.ipynb
+++ b/3. Natural Language Processing in TensorFlow/Course 3 - Week 4 - Lesson 1 - Notebook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -45,7 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +130,7 @@
        "\"اسلام آباد: حکومت نے رواں ماہ اصولی طور پر 'کامیاب پاکستان پروگرام' متعارف کروانے کا فیصلہ کرلیا جس کے تحت 40 لاکھ گھرانوں کو متعدد اسکیمز کے تحت معاونت فراہم کی جائے گی۔\\n\\nڈان اخبار کی رپورٹ کے مطابق یہ پروگرام آئندہ انتخابات سے قبل حکومت کی جانب سے معاشرے کے غریب طبقے کے لیے اٹھائے گئے بڑے اقدامات میں سے ایک معلوم ہوتا ہے۔\\n\\nڈان سے گفتگو کرتے ہوئے وزیر خزانہ شوکت ترین نے کہا کہ 'ہم نے اس پروگرام کے ہر پہلو کو حتمی شکل دے دی ہے اور اسے جولائی کے وسط میں متعارف کروایا جائے گا'۔\\n\\nیہ بھی پڑھیں: بجٹ 2022ء میں نوجوانوں کے لیے کیا ’خاص‘ ہے؟\\n\\nپروگرام کے چند پہلوؤں سے آگاہ کرتے ہوئے انہوں نے بتایا کہ اس کا مقصد عوام کو رہائشی منصوبوں، ہنر کی تربیت، صحت کارڈ اور کاروبار اور زرعی کاموں کے لیے بلاسود قرضے فراہم کرنا ہے۔\\n\\nتاہم ان کا کہنا تھا کہ اہداف ایک سال میں نہیں بلکہ وقت کے ساتھ ساتھ حاصل کیے جائیں گے۔\\n\\nوفاقی وزیر نے کہا کہ مالی سال 22-2021 کے دوران تقریباً 3 کھرب سے 4 کھرب روپے کے بلاسود قرضے دیے جائیں گے اور کہا کہ بلاسود قرضوں کے لیے سبسڈی کی رقم مالی سال 22-2021 کے بجٹ میں مختص کی جاچکی ہے۔\\n\\nانہوں نے بتایا کہ 'کامیاب جوان پروگرام' اس منصوبے کا ہی حصہ ہوگا۔\\n\\nٹیکس بیس کو بڑھانے کے بارے میں انہوں نے کہا کہ 72 لاکھ افراد کو ٹیکس نیٹ میں لانے کے لیے حکمت عملی تشکیل دی گئی ہے جسے جلد حتمی شکل دی جائے گی اور کسی ٹیکس دہندہ کو ہراساں نہیں کیا جائے گا۔\\n\\nمزید پڑھیں: نوجوانوں کو روزگار کی فراہمی کیلئے 2 خصوصی پروگرامز شروع کیے ہیں، وزیراعظم\\n\\nان کا مزید کہنا تھا کہ رواں مالی سال میں پوائنٹ آف سیل پروگرام کو زیادہ سے زیادہ تاجروں تک پہنچایا جائے گا۔\\n\\nدوسری جانب اقتصادری مشاورتی کونسل (ای اے سی) کے اجلاس میں وزیر خزانہ نے مستحکم اور مجموعی اقتصادی نمو کے حصول کے لیے طویل المدتی منصوبہ بندی پر زور دیا۔\\n\\nانہوں نے کہا کہ وزیراعظم عمران خان نے دہائیوں کے بعد ای اے سی کی تشکیل نو کی ہے، جس کا مقصد تمام اسٹیک ہولڈرز سے مشاورت کر کے پائیدار معاشی نمو کے لیے ٹھوس تجاویز مرتب کرنا ہے۔\\n\\nای اے سی کے تیسرے اجلاس کے دوران 4 ذیلی گروپوں نے سرکاری انٹرپرائزز اور نجکاری، توانائی، مقامی تجارت اور ملک میں قیمتیں مستحکم رکھنے پر پریزینٹیشنز دیں۔\\n\\nوزیراعظم کے معاون خصوصی برائے خزانہ و ریونیو ڈاکٹر وقار مسعود خان نے قیمتوں میں استحکام سے متعلق ایک تفصیلی جائزہ پیش کیا جس میں ملک میں قیمتیں مستحکم کرنے کے لیے قلیل مدتی، وسط مدتی اور طویل مدتی تجاویز شامل تھیں۔\\n\\nیہ بھی پڑھیں: حکومت نے 'کامیاب جوان پروگرام' میں قرضوں کی حد ڈھائی کروڑ روپے تک بڑھا دی\\n\\nانہوں نے موجودہ اور تاریخی تناظر میں پاکستان اور پورے خطے میں قیمتوں کے مابین تقابلی جائزہ پیش کیا۔ شامل کیا گیا۔\\n\\nعلاوہ ازیں زید بشیر نے 'ڈومیسٹک کامرس سیکٹر' کے بارے میں پریزنٹیشن دیتے ہوئے دستاویزی/ مربوط شعبوں کو تقویت دینے اور ان کی بحالی اور مختصر مدت کے دوران خوردہ فروشوں کو مزید منظم ماحول میں لاکر قومی خزانے میں شراکت میں اضافہ کرنے کے ذریعہ ای کامرس کی حقیقی صلاحیت کا پوری طرح سے ادراک کرنے کی نشاندہی کی۔\\n\\nکمپنیوں کے اندراج پر ٹیکس کریڈٹ اور درمیانی مدت کے منصوبوں کے تحت خواتین کو ملازمت میں شامل کرنے کی حوصلہ افزائی جبکہ تجارتی شعبے کو فروغ دینے کے لئے طویل المدتی حکمت عملی کے تحت خوردہ فروشوں کی ترقی اور ٹیکس ایڈجسٹیبیلیٹی کے لیے تجاویز دی گئیں۔\\n\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2092,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2115,16 +2136,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'کے': 1, 'میں': 2, 'نے': 3, 'کی': 4, 'اور': 5, 'کو': 6, 'سے': 7, 'لیے': 8, 'کہ': 9, 'کا': 10, 'جائے': 11, 'کہا': 12, 'دی': 13, 'انہوں': 14, 'ٹیکس': 15, 'پر': 16, 'تحت': 17, 'پروگرام': 18, 'ہے۔': 19, 'کیا': 20, 'سال': 21, 'ای': 22, 'کرنے': 23, 'حکومت': 24, \"'کامیاب\": 25, \"پروگرام'\": 26, 'جس': 27, 'یہ': 28, 'ایک': 29, 'ہوئے': 30, 'وزیر': 31, 'خزانہ': 32, 'اس': 33, 'پڑھیں': 34, 'بلاسود': 35, 'ان': 36, 'مالی': 37, 'دوران': 38, 'مزید': 39, 'وزیراعظم': 40, 'اے': 41, 'سی': 42, 'مستحکم': 43, 'طویل': 44, 'تجاویز': 45, 'شامل': 46, 'رواں': 47, 'پاکستان': 48, 'متعارف': 49, 'لاکھ': 50, 'فراہم': 51, 'ڈان': 52, 'جانب': 53, 'کرتے': 54, 'حتمی': 55, 'شکل': 56, 'ہے': 57, 'وسط': 58, 'بھی': 59, 'بجٹ': 60, 'نوجوانوں': 61, 'بتایا': 62, 'مقصد': 63, 'قرضے': 64, 'کرنا': 65, 'کہنا': 66, 'تھا': 67, 'نہیں': 68, 'ساتھ': 69, 'کیے': 70, 'جائیں': 71, '22': 72, '2021': 73, 'کھرب': 74, '4': 75, 'روپے': 76, 'قرضوں': 77, 'جوان': 78, 'بارے': 79, 'حکمت': 80, 'عملی': 81, 'تشکیل': 82, 'گا۔': 83, 'خصوصی': 84, 'زیادہ': 85, 'تک': 86, 'اجلاس': 87, 'نمو': 88, 'المدتی': 89, 'خان': 90, 'ملک': 91, 'قیمتیں': 92, 'قیمتوں': 93, 'جائزہ': 94, 'پیش': 95, 'مدتی': 96, 'کامرس': 97, 'دینے': 98, 'مدت': 99, 'خوردہ': 100, 'فروشوں': 101, 'اسلام': 102, 'آباد': 103, 'ماہ': 104, 'اصولی': 105, 'طور': 106, 'کروانے': 107, 'فیصلہ': 108, 'کرلیا': 109, '40': 110, 'گھرانوں': 111, 'متعدد': 112, 'اسکیمز': 113, 'معاونت': 114, 'گی۔': 115, 'اخبار': 116, 'رپورٹ': 117, 'مطابق': 118, 'آئندہ': 119, 'انتخابات': 120, 'قبل': 121, 'معاشرے': 122, 'غریب': 123, 'طبقے': 124, 'اٹھائے': 125, 'گئے': 126, 'بڑے': 127, 'اقدامات': 128, 'معلوم': 129, 'ہوتا': 130, 'گفتگو': 131, 'شوکت': 132, 'ترین': 133, \"'ہم\": 134, 'ہر': 135, 'پہلو': 136, 'دے': 137, 'اسے': 138, 'جولائی': 139, 'کروایا': 140, \"گا'۔\": 141, '2022ء': 142, '’خاص‘': 143, 'ہے؟': 144, 'چند': 145, 'پہلوؤں': 146, 'آگاہ': 147, 'عوام': 148, 'رہائشی': 149, 'منصوبوں،': 150, 'ہنر': 151, 'تربیت،': 152, 'صحت': 153, 'کارڈ': 154, 'کاروبار': 155, 'زرعی': 156, 'کاموں': 157, 'تاہم': 158, 'اہداف': 159, 'بلکہ': 160, 'وقت': 161, 'حاصل': 162, 'گے۔': 163, 'وفاقی': 164, 'تقریباً': 165, '3': 166, 'دیے': 167, 'گے': 168, 'سبسڈی': 169, 'رقم': 170, 'مختص': 171, 'جاچکی': 172, 'منصوبے': 173, 'ہی': 174, 'حصہ': 175, 'ہوگا۔': 176, 'بیس': 177, 'بڑھانے': 178, '72': 179, 'افراد': 180, 'نیٹ': 181, 'لانے': 182, 'گئی': 183, 'جسے': 184, 'جلد': 185, 'گی': 186, 'کسی': 187, 'دہندہ': 188, 'ہراساں': 189, 'روزگار': 190, 'فراہمی': 191, 'کیلئے': 192, '2': 193, 'پروگرامز': 194, 'شروع': 195, 'ہیں،': 196, 'پوائنٹ': 197, 'آف': 198, 'سیل': 199, 'تاجروں': 200, 'پہنچایا': 201, 'دوسری': 202, 'اقتصادری': 203, 'مشاورتی': 204, 'کونسل': 205, 'مجموعی': 206, 'اقتصادی': 207, 'حصول': 208, 'منصوبہ': 209, 'بندی': 210, 'زور': 211, 'دیا۔': 212, 'عمران': 213, 'دہائیوں': 214, 'بعد': 215, 'نو': 216, 'ہے،': 217, 'تمام': 218, 'اسٹیک': 219, 'ہولڈرز': 220, 'مشاورت': 221, 'کر': 222, 'پائیدار': 223, 'معاشی': 224, 'ٹھوس': 225, 'مرتب': 226, 'تیسرے': 227, 'ذیلی': 228, 'گروپوں': 229, 'سرکاری': 230, 'انٹرپرائزز': 231, 'نجکاری،': 232, 'توانائی،': 233, 'مقامی': 234, 'تجارت': 235, 'رکھنے': 236, 'پریزینٹیشنز': 237, 'دیں۔': 238, 'معاون': 239, 'برائے': 240, 'و': 241, 'ریونیو': 242, 'ڈاکٹر': 243, 'وقار': 244, 'مسعود': 245, 'استحکام': 246, 'متعلق': 247, 'تفصیلی': 248, 'قلیل': 249, 'مدتی،': 250, 'تھیں۔': 251, 'حد': 252, 'ڈھائی': 253, 'کروڑ': 254, 'بڑھا': 255, 'موجودہ': 256, 'تاریخی': 257, 'تناظر': 258, 'پورے': 259, 'خطے': 260, 'مابین': 261, 'تقابلی': 262, 'کیا۔': 263, 'گیا۔': 264, 'علاوہ': 265, 'ازیں': 266, 'زید': 267, 'بشیر': 268, \"'ڈومیسٹک\": 269, \"سیکٹر'\": 270, 'پریزنٹیشن': 271, 'دیتے': 272, 'دستاویزی': 273, 'مربوط': 274, 'شعبوں': 275, 'تقویت': 276, 'بحالی': 277, 'مختصر': 278, 'منظم': 279, 'ماحول': 280, 'لاکر': 281, 'قومی': 282, 'خزانے': 283, 'شراکت': 284, 'اضافہ': 285, 'ذریعہ': 286, 'حقیقی': 287, 'صلاحیت': 288, 'پوری': 289, 'طرح': 290, 'ادراک': 291, 'نشاندہی': 292, 'کی۔': 293, 'کمپنیوں': 294, 'اندراج': 295, 'کریڈٹ': 296, 'درمیانی': 297, 'منصوبوں': 298, 'خواتین': 299, 'ملازمت': 300, 'حوصلہ': 301, 'افزائی': 302, 'جبکہ': 303, 'تجارتی': 304, 'شعبے': 305, 'فروغ': 306, 'لئے': 307, 'ترقی': 308, 'ایڈجسٹیبیلیٹی': 309, 'گئیں۔': 310}\n"
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-3b2ad3e9db95>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tokenizer' is not defined"
      ]
     }
    ],
-   "source": [
-    "print(tokenizer.word_index)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3353,13 +3376,6 @@
    "source": [
     "seed_text =\"شوکت ترین نے کہا کہ ہم نے اس پروگرام کے ہر پہلو کو\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
